--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   
 </head>
 <body>
-    <h1> HAZEL </h1>
+    <h1> Dustin is smart and sexy </h1>
+    
     
     <div id="game-board">
 
@@ -55,6 +56,10 @@
             <button class="keyboard-button">n</button>
             <button class="keyboard-button">m</button>
             <button class="keyboard-button">Enter</button>
+        </div>
+        <div class="fourth-row second-row"> 
+            <button class="keyboard-button reset-button">new game</button>
+
         </div>
 
     <script
