--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   
 </head>
 <body>
-    <h1> Dustin is smart and sexy </h1>
+    <a href="https://dustin-hays.netlify.app/"><h6>I want to see your portfolio, stud!<h6></h6></a>
+    <h1> Dustin Hays is smart and sexy </h1>
     
     
     <div id="game-board">
