keyboard button rem to vw

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div id="keyboard-cont">
-        <div class="first-row">
+        <div class="first-row row">
             <button class="keyboard-button">q</button>
             <button class="keyboard-button">w</button>
             <button class="keyboard-button">e</button>
@@ -36,7 +36,7 @@
             <button class="keyboard-button">o</button>
             <button class="keyboard-button">p</button>
         </div>
-        <div class="second-row">
+        <div class="second-row row">
             <button class="keyboard-button">a</button>
             <button class="keyboard-button">s</button>
             <button class="keyboard-button">d</button>
@@ -47,7 +47,7 @@
             <button class="keyboard-button">k</button>
             <button class="keyboard-button">l</button>
         </div>
-        <div class="third-row">
+        <div class="third-row row">
             <button class="keyboard-button">Del</button>
             <button class="keyboard-button">z</button>
             <button class="keyboard-button">x</button>
@@ -58,7 +58,7 @@
             <button class="keyboard-button">m</button>
             <button class="keyboard-button">Enter</button>
         </div>
-        <div class="fourth-row second-row"> 
+        <div class="fourth-row second-row row"> 
             <button class="keyboard-button reset-button">new game</button>
 
         </div>
