--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   
 </head>
 <body>
+    <img src="images/scrabble.jpg" alt=""wordle clone>
     <a href="https://dustin-hays.netlify.app/"><h6>I want to see your portfolio, stud!<h6></h6></a>
     <h1> Dustin Hays is smart and sexy </h1>
     
