--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <img src="images/scrabble.jpg" alt=""wordle clone>
     <a href="#rules"><h6>How in the hell do I play?<h6></h6></a>
     <h1> Dustin Hays is smart and sexy </h1>
+    <p>NICE!</p>
     
     
     <div id="game-board">
